Closed Bug 404716 Opened 17 years ago Closed 17 years ago

AIX Compilation error for trunk build source xptcstubs_ppc_aix64.cpp : "nsIInterfaceInfo" did not find a declaration , "CallMethod" is not a member of "class nsXPTCStubBase"

Categories

(Core :: XPCOM, defect)

Other
Other
defect
Not set
major

Tracking

()

RESOLVED FIXED
mozilla1.9beta3

People

(Reporter: shailen.n.jain, Assigned: shailen.n.jain)

Details

Attachments

(1 file)

User-Agent:       Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1.9) Gecko/20071025 Firefox/2.0.0.9
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1.9) Gecko/20071025 Firefox/trunk build

While compiling trunk build on AIX, getting below compilation error - 

/AIX_5.2_Clobber/mozilla/xpcom/reflect/xptcall/src/md/unix/xptcstubs_ppc_aix64.cpp", line 58.5: 1540
-0274 (S) The name lookup for "nsIInterfaceInfo" did not find a declaration.
/AIX_5.2_Clobber/mozilla/xpcom/reflect/xptcall/src/md/unix/xptcstubs_ppc_aix64.cpp", line 58.23: 154
0-0274 (S) The name lookup for "iface_info" did not find a declaration.
/AIX_5.2_Clobber/mozilla/xpcom/reflect/xptcall/src/md/unix/xptcstubs_ppc_aix64.cpp", line 188.18: 15
40-0217 (S) "CallMethod" is not a member of "class nsXPTCStubBase".

With the trunk build, the class nsXPTCStubBase definition is moved from the file xptcall.h to xptcprivate.h. Also the class definition for nsXPTCStubBase has got changed and the below previous member functions are not existing anymore in xptcprivate.h. 
 
    NS_IMETHOD GetInterfaceInfo(nsIInterfaceInfo** info) = 0;
    NS_IMETHOD CallMethod(PRUint16 methodIndex,
                          const nsXPTMethodInfo* info,
                          nsXPTCMiniVariant* params) = 0;

This is causing a compilation error while compiling the source code 'xptcstubs_ppc_aix64.cpp' as it calls the previous memebr functions 'GetInterfaceInfo' and 'CallMethod'

       

Reproducible: Always

Steps to Reproduce:
1.Build Mozilla Firefox Trunk build on AIX with Gnome 2.12 RPMS of 64 bit version.
2.
3.
Actual Results:  
Build fails with the above errors.

Expected Results:  
No build failure
Component: Build Config → XPCOM
Product: Firefox → Core
QA Contact: build.config → xpcom
Version: unspecified → Trunk
AIX needs OS-specific changes from bug 349002.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Attached patch Patch V1Splinter Review
Created a patch to fix the compiler errors on AIX
Assignee: nobody → shailen.n.jain
Comment on attachment 291641 [details] [diff] [review]
Patch V1

Don't forget to request review on patches. :)
Attachment #291641 - Flags: superreview?(benjamin)
Attachment #291641 - Flags: review?(benjamin)
Status: NEW → ASSIGNED
Attachment #291641 - Flags: superreview?(benjamin)
Attachment #291641 - Flags: superreview+
Attachment #291641 - Flags: review?(benjamin)
Attachment #291641 - Flags: review+
Attachment #291641 - Flags: approval1.9?
Comment on attachment 291641 [details] [diff] [review]
Patch V1

a=endgame drivers
Attachment #291641 - Flags: approval1.9? → approval1.9+
Keywords: checkin-needed
Thanks for the patch.

Checking in xpcom/reflect/xptcall/src/md/unix/xptcinvoke_asm_ppc_aix.s;
/cvsroot/mozilla/xpcom/reflect/xptcall/src/md/unix/xptcinvoke_asm_ppc_aix.s,v  <--  xptcinvoke_asm_ppc_aix.s
new revision: 1.9; previous revision: 1.8
done
Checking in xpcom/reflect/xptcall/src/md/unix/xptcinvoke_asm_ppc_aix64.s;
/cvsroot/mozilla/xpcom/reflect/xptcall/src/md/unix/xptcinvoke_asm_ppc_aix64.s,v  <--  xptcinvoke_asm_ppc_aix64.s
new revision: 1.2; previous revision: 1.1
done
Checking in xpcom/reflect/xptcall/src/md/unix/xptcinvoke_asm_ppc_ibmobj_aix.s;
/cvsroot/mozilla/xpcom/reflect/xptcall/src/md/unix/xptcinvoke_asm_ppc_ibmobj_aix.s,v  <--  xptcinvoke_asm_ppc_ibmobj_aix.s
new revision: 1.3; previous revision: 1.2
done
Checking in xpcom/reflect/xptcall/src/md/unix/xptcstubs_ppc_aix.cpp;
/cvsroot/mozilla/xpcom/reflect/xptcall/src/md/unix/xptcstubs_ppc_aix.cpp,v  <--  xptcstubs_ppc_aix.cpp
new revision: 1.9; previous revision: 1.8
done
Checking in xpcom/reflect/xptcall/src/md/unix/xptcstubs_ppc_aix64.cpp;
/cvsroot/mozilla/xpcom/reflect/xptcall/src/md/unix/xptcstubs_ppc_aix64.cpp,v  <--  xptcstubs_ppc_aix64.cpp
new revision: 1.2; previous revision: 1.1
done
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9 M11
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: