Bug 404716 - "AIX Compilation error for trunk build source xptcstubs_ppc_aix64.cpp : "nsIInterfaceInfo" did not find a declaration , "CallMethod" is not a member of "class nsXPTCStubBase"" [p=shailen.n.jain@gmail.com (Shailen) r+sr=bsmedberg a1.9=damons]